# soft-engg-project-may-2025-se-May-12

./: .env  .gitignore  README.md
backend/: .env  .gitignore  main.py  pyproject.toml  requirements.txt  requirments.txt  yaml_file.yaml
backend/app/: config.py  models.py  test.py
backend/app/routers/: _shared_join_requests.py  auth.py  chat_bot.py  connection_activity.py  connection_requests.py  connections.py  invitation_codes.py  parent_children.py  parent_dashboard.py  parent_family.py  parent_family_codes.py  parent_profile.py  parent_reports.py  parent_requests.py  parent_tasks.py  privacy.py  profile_completion.py  student_dashboard.py  student_diet.py  student_emotions.py  student_finance.py  student_health.py  student_medical.py  student_nutrition.py  student_profile.py  student_tasks.py  teacher_dashboard.py  teacher_profile.py  teacher_reports.py  teacher_students.py  teacher_tasks.py  users.py
backend/app/utils/: profile_utils.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/test/: api_documentation.md  testCase.md  yaml_tomd.py
frontend/: .env  LOGIN_BYPASS_README.md  README-1.md  README.md  comp-readme.md  jsconfig.json  package-lock.json  package.json  tailwind.config.js  theme.md  view-readme.md  vite.config.js
frontend/src/: App.vue  main.js  style.css  supabaseClient.js
frontend/src/components/: index.js
frontend/src/router/: index.js
frontend/src/services/: api.js  chatService.js  diaryService.js  (+20 more)
schema/: growthgenie_schema.sql
wireframe/: diet.html  emotional.html  finance.html  index.html  task.html
(+93 files in other folders)
