[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "gotrue>=2.12.3",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "supabase>=2.16.0",
    "uvicorn>=0.35.0",
]
